--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body class="mat-typography">
+  <link rel="stylesheet" href="https://bootswatch.com/4/cosmo/bootstrap.css" media="screen">
   <app-root></app-root>
 </body>
 </html>
