fix: removed extra width on all pages and circular imports

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 </head>
-<body class="mat-typography">
+<body class="mat-typography" style="overflow-x: hidden">
   <link rel="stylesheet" href="https://bootswatch.com/4/cosmo/bootstrap.css" media="screen">
   <app-root></app-root>
 </body>
